[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/core/CardViewer/CVPreviewPopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/core/CardViewer/CardLabel.gd" type="Script" id=2]

[node name="CardLabel" type="RichTextLabel"]
offset_left = 18.0
offset_right = 105.0
offset_bottom = 18.0
mouse_filter = 1
size_flags_horizontal = 3
bbcode_enabled = true
fit_content_height = true
scroll_active = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewPopup" parent="." instance=ExtResource( 1 )]

[connection signal="mouse_entered" from="." to="." method="_on_CardLabel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CardLabel_mouse_exited"]
